Bugfix
Fixed "open in explorer"